--- a/index.html
+++ b/index.html
@@ -64,6 +64,27 @@
       line-height: 1.6;
     }
 
+    .price-box {
+      background: #fff3e0;
+      border-left: 6px solid #ff9800;
+      padding: 15px 20px;
+      margin-top: 20px;
+      font-size: 1.2rem;
+      line-height: 1.6;
+      border-radius: 6px;
+    }
+
+    .price-box .old-price {
+      color: #888;
+      text-decoration: line-through;
+    }
+
+    .price-box .new-price {
+      color: #d32f2f;
+      font-size: 1.5rem;
+      font-weight: bold;
+    }
+
     .features {
       background: #fff;
       padding: 40px 20px;
@@ -136,6 +157,12 @@
     <div class="text">
       <h2>Elegância e Qualidade</h2>
       <p>Este casaco foi projetado para os homens modernos que não abrem mão do estilo mesmo nos dias mais frios. Feito com materiais de alta qualidade, ele proporciona aquecimento superior sem comprometer o visual.</p>
+
+      <div class="price-box">
+        <p><span class="old-price">De R$ 250,00</span></p>
+        <p><span class="new-price">Por R$ 160,00</span></p>
+        <p>ou em até 12x de R$ 15,53</p>
+      </div>
     </div>
   </div>
 
